20250501-2
Removed Lua and other, fixed bugs.
