# console/console_nakama.swagger.json
@@ -220,61 +220,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "type": "string",
-                  "description": "Username."
-                },
-                "display_name": {
-                  "type": "string",
-                  "description": "Display name."
-                },
-                "metadata": {
-                  "type": "string",
-                  "description": "Metadata."
-                },
-                "avatar_url": {
-                  "type": "string",
-                  "description": "Avatar URL."
-                },
-                "lang_tag": {
-                  "type": "string",
-                  "description": "Langtag."
-                },
-                "location": {
-                  "type": "string",
-                  "description": "Location."
-                },
-                "timezone": {
-                  "type": "string",
-                  "description": "Timezone."
-                },
-                "custom_id": {
-                  "type": "string",
-                  "description": "Custom ID."
-                },
-                "email": {
-                  "type": "string",
-                  "description": "Email."
-                },
-                "password": {
-                  "type": "string",
-                  "description": "Password."
-                },
-                "device_ids": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "string"
-                  },
-                  "description": "Device ID modifications."
-                },
-                "wallet": {
-                  "type": "string",
-                  "description": "Wallet."
-                }
-              },
-              "description": "Update user account information."
+              "$ref": "#/definitions/UpdateAccountBody"
             }
           }
         ]
@@ -593,14 +539,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "device_id": {
-                  "type": "string",
-                  "description": "Device ID to unlink."
-                }
-              },
-              "description": "Unlink a particular device ID from a user's account."
+              "$ref": "#/definitions/UnlinkDeviceBody"
             }
           }
         ]
@@ -894,22 +833,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "body": {
-                  "type": "string"
-                },
-                "user_id": {
-                  "type": "string"
-                },
-                "session_vars": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "string"
-                  }
-                }
-              },
-              "title": "API Explorer request definition for CallApiEndpoint"
+              "$ref": "#/definitions/CallRpcEndpointBody"
             }
           }
         ]
@@ -945,22 +869,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "body": {
-                  "type": "string"
-                },
-                "user_id": {
-                  "type": "string"
-                },
-                "session_vars": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "string"
-                  }
-                }
-              },
-              "title": "API Explorer request definition for CallApiEndpoint"
+              "$ref": "#/definitions/CallApiEndpointBody"
             }
           }
         ]
@@ -1297,18 +1206,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "ids": {
-                  "type": "string",
-                  "description": "Users to add/join."
-                },
-                "join_request": {
-                  "type": "boolean",
-                  "description": "Whether it is a join request."
-                }
-              },
-              "description": "Add/join users to a group."
+              "$ref": "#/definitions/AddGroupUsersBody"
             }
           }
         ]
@@ -1401,39 +1299,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "description": "Name."
-                },
-                "description": {
-                  "type": "string",
-                  "description": "Description."
-                },
-                "lang_tag": {
-                  "type": "string",
-                  "description": "Langtag."
-                },
-                "metadata": {
-                  "type": "string",
-                  "description": "Metadata."
-                },
-                "avatar_url": {
-                  "type": "string",
-                  "description": "Avatar URL."
-                },
-                "open": {
-                  "type": "boolean",
-                  "description": "Anyone can join open groups, otherwise only admins can accept members."
-                },
-                "max_count": {
-                  "type": "integer",
-                  "format": "int32",
-                  "description": "The maximum number of members allowed."
-                }
-              },
-              "description": "Update group information."
+              "$ref": "#/definitions/UpdateGroupBody"
             }
           }
         ]
@@ -2148,14 +2014,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "value": {
-                  "type": "string",
-                  "description": "Setting value."
-                }
-              },
-              "description": "Request to update an existing setting."
+              "$ref": "#/definitions/UpdateSettingBody"
             }
           }
         ]
@@ -2405,28 +2264,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "value": {
-                  "type": "string",
-                  "description": "Value."
-                },
-                "version": {
-                  "type": "string",
-                  "description": "Version for OCC."
-                },
-                "permission_read": {
-                  "type": "integer",
-                  "format": "int32",
-                  "description": "Read permission value."
-                },
-                "permission_write": {
-                  "type": "integer",
-                  "format": "int32",
-                  "description": "Write permission value."
-                }
-              },
-              "description": "Write a new storage object or update an existing one."
+              "$ref": "#/definitions/Console.WriteStorageObjectBody"
             }
           }
         ]
@@ -2636,14 +2474,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "required": {
-                  "type": "boolean",
-                  "description": "Required."
-                }
-              },
-              "description": "Make a user's mfa required or not."
+              "$ref": "#/definitions/RequireUserMfaBody"
             }
           }
         ]
@@ -2787,6 +2618,20 @@
       },
       "description": "A list of users."
     },
+    "AddGroupUsersBody": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "string",
+          "description": "Users to add/join."
+        },
+        "join_request": {
+          "type": "boolean",
+          "description": "Whether it is a join request."
+        }
+      },
+      "description": "Add/join users to a group."
+    },
     "AddUserRequest": {
       "type": "object",
       "properties": {
@@ -2913,6 +2758,24 @@
       },
       "description": "Authenticate a console user with username and password."
     },
+    "CallApiEndpointBody": {
+      "type": "object",
+      "properties": {
+        "body": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "session_vars": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      },
+      "title": "API Explorer request definition for CallApiEndpoint"
+    },
     "CallApiEndpointResponse": {
       "type": "object",
       "properties": {
@@ -2924,6 +2787,24 @@
         }
       },
       "title": "API Explorer response definition for CallApiEndpoint"
+    },
+    "CallRpcEndpointBody": {
+      "type": "object",
+      "properties": {
+        "body": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "session_vars": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      },
+      "title": "API Explorer request definition for CallApiEndpoint"
     },
     "ChannelMessage": {
       "type": "object",
@@ -3033,6 +2914,30 @@
         }
       },
       "description": "The current server configuration and any associated warnings."
+    },
+    "Console.WriteStorageObjectBody": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "string",
+          "description": "Value."
+        },
+        "version": {
+          "type": "string",
+          "description": "Version for OCC."
+        },
+        "permission_read": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Read permission value."
+        },
+        "permission_write": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Write permission value."
+        }
+      },
+      "description": "Write a new storage object or update an existing one."
     },
     "ConsoleSession": {
       "type": "object",
@@ -3389,22 +3294,25 @@
       },
       "description": "A list of validated purchases stored by Nakama."
     },
+    "RequireUserMfaBody": {
+      "type": "object",
+      "properties": {
+        "required": {
+          "type": "boolean",
+          "description": "Required."
+        }
+      },
+      "description": "Make a user's mfa required or not."
+    },
     "RuntimeInfo": {
       "type": "object",
       "properties": {
-        "lua_rpc_functions": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "title": "Lua registered RPC functions"
-        },
         "go_rpc_functions": {
           "type": "array",
           "items": {
             "type": "string"
           },
-          "title": "Go registered RPC functions"
+          "title": "Lua registered RPC functions\nrepeated string lua_rpc_functions = 1;\nGo registered RPC functions"
         },
         "js_rpc_functions": {
           "type": "array",
@@ -3421,21 +3329,13 @@
           },
           "title": "Go loaded modules"
         },
-        "lua_modules": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/ModuleInfo"
-          },
-          "title": "Lua loaded modules"
-        },
         "js_modules": {
           "type": "array",
           "items": {
             "type": "object",
             "$ref": "#/definitions/ModuleInfo"
           },
-          "title": "JavaScript loaded modules"
+          "title": "Lua loaded modules\nrepeated ModuleInfo lua_modules = 5;\nJavaScript loaded modules"
         }
       },
       "title": "Runtime information"
@@ -3755,6 +3655,118 @@
         }
       },
       "description": "A list of validated subscriptions stored by Nakama."
+    },
+    "UnlinkDeviceBody": {
+      "type": "object",
+      "properties": {
+        "device_id": {
+          "type": "string",
+          "description": "Device ID to unlink."
+        }
+      },
+      "description": "Unlink a particular device ID from a user's account."
+    },
+    "UpdateAccountBody": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "description": "Username."
+        },
+        "display_name": {
+          "type": "string",
+          "description": "Display name."
+        },
+        "metadata": {
+          "type": "string",
+          "description": "Metadata."
+        },
+        "avatar_url": {
+          "type": "string",
+          "description": "Avatar URL."
+        },
+        "lang_tag": {
+          "type": "string",
+          "description": "Langtag."
+        },
+        "location": {
+          "type": "string",
+          "description": "Location."
+        },
+        "timezone": {
+          "type": "string",
+          "description": "Timezone."
+        },
+        "custom_id": {
+          "type": "string",
+          "description": "Custom ID."
+        },
+        "email": {
+          "type": "string",
+          "description": "Email."
+        },
+        "password": {
+          "type": "string",
+          "description": "Password."
+        },
+        "device_ids": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          },
+          "description": "Device ID modifications."
+        },
+        "wallet": {
+          "type": "string",
+          "description": "Wallet."
+        }
+      },
+      "description": "Update user account information."
+    },
+    "UpdateGroupBody": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "Name."
+        },
+        "description": {
+          "type": "string",
+          "description": "Description."
+        },
+        "lang_tag": {
+          "type": "string",
+          "description": "Langtag."
+        },
+        "metadata": {
+          "type": "string",
+          "description": "Metadata."
+        },
+        "avatar_url": {
+          "type": "string",
+          "description": "Avatar URL."
+        },
+        "open": {
+          "type": "boolean",
+          "description": "Anyone can join open groups, otherwise only admins can accept members."
+        },
+        "max_count": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The maximum number of members allowed."
+        }
+      },
+      "description": "Update group information."
+    },
+    "UpdateSettingBody": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "string",
+          "description": "Setting value."
+        }
+      },
+      "description": "Request to update an existing setting."
     },
     "UserGroup": {
       "type": "object",
